infrastructure/apps/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: master-srv1.local
      http:
        paths:
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: alertmanager-main
                port:
                  name: web
