infrastructure/apps/monitoring/common-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: master-srv1.local
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  name: web
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: alertmanager-main
                port:
                  name: web
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
